[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
